--- a/content/docs/teams.mdx
+++ b/content/docs/teams.mdx
@@ -1,6 +1,6 @@
 ---
-title: Not Implemented
-description: This page is in progress.
+title: Teams
+description:This is the guide for using teams
 ---
 
 <Callout>
