--- a/content/docs/documentation/index.mdx
+++ b/content/docs/documentation/index.mdx
@@ -33,37 +33,22 @@ description: Build your file space around us
 
 <div className="grid gap-4 lg:grid-cols-2 mt-6">
 
-<Card href="/docs/documentation">
+<Card href="/docs/api-keys">
 
-### Contentlayer
+### API Keys
 
-Learn how to use MDX with Contentlayer.
-
-</Card>
-
-<Card href="/docs/documentation/components">
-
-### Components
-
-Using React components in Mardown.
+Learn how to use our API Keys on your app.
 
 </Card>
 
-<Card href="/docs/documentation/components">
+<Card href="/docs/teams" disabled>
 
-### Code Blocks
+### Teams
 
-Beautiful code blocks with syntax highlighting.
-
-</Card>
-
-<Card href="/docs/documentation/components">
-
-### Style Guide
-
-View a sample page with all the styles.
+Accelerate and firm your journey by using teams
 
 </Card>
+
 
 </div>
 
