--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -1,39 +1,37 @@
----
-title: API Keys
-description: How to create and get started using our api keys
----
+# API Keys
+## How to create and get started using our API keys
 
 <Callout>
-
-API Keys makes it easier 
+API Keys make it easier.
 </Callout>
 
+## Getting Started
 
-# Getting started 
-
-Go to the [`dashboard/api-keys`](https://mega-mess.vercel.app/) and create an API key there.
+Go to the [dashboard/api-keys](https://mega-mess.vercel.app/) and create an API key there.
 
 ## Setting up an API Key
 
-Once you have clicked `Create API Key` button , you will be asked for name and description , which both are non required feild and the website that you want to use that out service , but it is recomended to have a name and description so that you kind of idea about for which purpose you are utilizing that API endpoint. 
+Once you have clicked the "Create API Key" button, you will be asked for a name and description (both are non-required fields) and the website that you want to use our service for. It is recommended to provide a name and description to have an idea of the purpose for which you are utilizing the API endpoint.
 
-## Using the API Keys 
+## Using the API Keys
 
-After copying the api keys you can using in your app
+After copying the API keys, you can use them in your app.
 
-for Nextjs/React . you can use 
+The API endpoint for making a request is: `https://mega-mess.vercel.app`
+
+For Next.js/React, you can use the following code:
 
 ```js
 export async function GET(req: Request) {
-    // mokin something that comes as a body - 
-    // name , description , fileUrl
-    const name = 'Test name'
-    const description = 'Test Descriptions'
-    const fileUrl = 'https://files.edgestore.dev/syq4tyuw5ogm0mk3/publicFiles/_public/e36f81e8-e69f-4c62-91e4-a5f92563fc15.svg'
-    const size = '1.4kb'
-    const baseUrl = process.env.NEXT_PUBLIC_APP_URL
-    const res = await fetch(`https://mega-mess.vercel.app/api/files` , {
-        method:"POST",
+    // Mocking something that comes as a body - 
+    // name, description, fileUrl
+    const name = 'Test name';
+    const description = 'Test Descriptions';
+    const fileUrl = 'https://files.edgestore.dev/syq4tyuw5ogm0mk3/publicFiles/_public/e36f81e8-e69f-4c62-91e4-a5f92563fc15.svg';
+    const size = '1.4kb';
+    const baseUrl = process.env.NEXT_PUBLIC_APP_URL;
+    const res = await fetch(`https://mega-mess.vercel.app/api/files`, {
+        method: "POST",
         headers: {
             'Content-Type': 'application/json',
             'api-key': 'ad0e8fa6a2a5c31dd5b7dd8e3c1195e9',
@@ -43,15 +41,12 @@ export async function GET(req: Request) {
             description: description,
             fileUrl: fileUrl,
             size: size,
-
         })
-        
-    })
-    const result = await res.json()
+    });
+    const result = await res.json();
 
-    return new Response(result)
-} 
-```
+    return new Response(result);
+}
 
 However to avoid the test names , test description , and the file url i highly recommend checking the our custome made comps for handling [file upload](https://github.com/Kinfe123/MegaMess/blob/main/app/(dashboard)/dashboard/_components/file-upload.tsx) with EdgeStore.
 
