fix: docs url fix

--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -7,7 +7,7 @@ API Keys make it easier.
 
 ## Getting Started
 
-Go to the [dashboard/api-keys](https://mega-mess.vercel.app/) and create an API key there.
+Go to the [dashboard/api-keys](https://mega-mess.vercel.app/dashboard/api-keys) and create an API key there.
 
 ## Setting up an API Key
 
@@ -17,7 +17,7 @@ Once you have clicked the "Create API Key" button, you will be asked for a name 
 
 After copying the API keys, you can use them in your app.
 
-The API endpoint for making a request is: `https://mega-mess.vercel.app`
+The API endpoint for making a request is: `https://mega-mess.vercel.app/api/files`
 
 For Next.js/React, you can use the following code:
 
@@ -70,6 +70,6 @@ Then this give you the response which seems like below
 ```
 
 
-After that you now you got a file uploader component , file uploader api endpoints along with request headers including your API Key and now you can your files in our [`dashboard`](https://mega-mess.vercel.app/).
+After that you now you got a file uploader component , file uploader api endpoints along with request headers including your API Key and now you can your files in our [`dashboard`](https://mega-mess.vercel.app/dashboard).
 
 
