chore: docs fix

--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -6,7 +6,7 @@ description: This is the guide for api key setup
 
 
 # API Keys
-## How to create and get started using our API keys
+ How to create and get started using our API keys
 
 <Callout>
 API Keys make it easier.
