chore: docs issue

--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -33,7 +33,7 @@ For Next.js/React, you can use the following code:
 export const dynamic = 'force-dynamic'
 
 export async function GET(req: Request) {
-    // mokin something that comes as a body - 
+    // moking something that comes as a body - 
     // name , description , fileUrl
     const name = 'TEST NAMEE'
     const description = 'Test Descriptions'
