fix: apikey prefix

--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -28,6 +28,18 @@ The API endpoint for making a request is: `https://mega-mess.vercel.app/api/file
 
 For Next.js/React, you can use the following code:
 
+# Step on claiming the apikey
+
+- First go to the [MegaMess website dashboard](https://mega-mess.vercel.app/dashboard)
+- Choose a menu called API-Keys
+- Click on `Creating API Keys`
+- Add your website you want to use megamess service
+- Then copy the api key by clicking the copy button on the api key carrd 
+- Upsert an `.env` file with MEGAMESS_API_KEY='megamess'
+
+
+
+
 ```js
 
 export const dynamic = 'force-dynamic'
