--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -39,6 +39,9 @@ For Next.js/React, you can use the following code:
 - THen you can use the `.env` file depending on the runtime you are using. like if it were node , you can use `process.env.MEGAMESS_API_KEY` or you can refer the usage of the `env` from their docs on how to use the   `.env` variables.
 
 
+Now we can demonistrate the usage of the api key on Nextjs API handlers as follows
+
+
 
 
 
@@ -58,7 +61,7 @@ export async function GET(req: Request) {
         method:"POST",
         headers: {
             'Content-Type': 'application/json',
-            'megamess-api-key': '1f083687c0e91906262c38c6bd77e722',
+            'megamess-api-key': procss.env.MEGAMESS_API_KEY,
         },
         body: JSON.stringify({
             name: name,
