--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -28,7 +28,7 @@ The API endpoint for making a request is: `https://mega-mess.vercel.app/api/file
 
 For Next.js/React, you can use the following code:
 
-# Step on claiming the apikey
+##  Step on claiming the apikey
 
 - First go to the [MegaMess website dashboard](https://mega-mess.vercel.app/dashboard)
 - Choose a menu called API-Keys
