fix; prod ready

--- a/content/docs/api-keys.mdx
+++ b/content/docs/api-keys.mdx
@@ -5,14 +5,7 @@ description: This is the guide for api key setup
 
 
 
-# API Keys
- How to create and get started using our API keys
-
-<Callout>
-API Keys make it easier.
-</Callout>
-
-## Getting Started
+### Getting Started
 
 Go to the [dashboard/api-keys](https://mega-mess.vercel.app/dashboard/api-keys) and create an API key there.
 
@@ -35,7 +28,7 @@ For Next.js/React, you can use the following code:
 - Click on `Creating API Keys`
 - Add your website you want to use megamess service
 - Then copy the api key by clicking the copy button on the api key carrd 
-- Upsert an `.env` file with MEGAMESS_API_KEY='megamess_************'
+- Upsert an `.env` file with `MEGAMESS_API_KEY='megamess_************'`
 - THen you can use the `.env` file depending on the runtime you are using. like if it were node , you can use `process.env.MEGAMESS_API_KEY` or you can refer the usage of the `env` from their docs on how to use the   `.env` variables.
 
 
