--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -28,7 +28,7 @@ description: Build your file space around us
 - [x] Edit and Delete your file at anypoints in time - [x] since it will be cascaded 
 - [x] Unique shareable links for each file for public to view it or your emails based access users 
 - [x] Each file analytics reports with ingested email
-- [x] API keyS
+- [x] API keys
 - Teams [still in dev]  
 
 <div className="grid gap-4 lg:grid-cols-2 mt-6">
