--- a/content/docs/teams.mdx
+++ b/content/docs/teams.mdx
@@ -5,6 +5,6 @@ description: This is the guide for using teams
 
 <Callout>
 
-This site is a work in progress. If you see dummy text on a page, it means I'm still working on it. You can follow updates on Twitter [@shadcn](https://twitter.com/shadcn).
+This site is a work in progress. If you see dummy text on a page, it means I'm still working on it. You can follow updates on Twitter [@kinfish](https://twitter.com/kinfishT).
 
 </Callout>
