--- a/content/docs/documentation/index.mdx
+++ b/content/docs/documentation/index.mdx
@@ -30,6 +30,7 @@ description: Build your file space around us
 - [x] Each file analytics reports with ingested email
 - [x] API keys
 - Teams [still in dev]  
+- Stripe [Not started]
 
 <div className="grid gap-4 lg:grid-cols-2 mt-6">
 
